# fart

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FART.spec  README.md  SECURITY.md  build_windows_exe.bat  fart.py  fart.py.bak  pyproject.toml  requirements.txt  run_source.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-windows.yml
docs/: CALIBRATION.md  GRANDMA3_TESTING.md  RELEASE_CHECKLIST.md
examples/: four_mac_quantum_profiles.json
tests/: test_core.py
